Reduce test reliance on runtime default service graph